# csv-table

./: LICENSE  README.md  lista.csv  main.py  menu.py  pyproject.toml  requirements.txt
